--- a/shopping.html
+++ b/shopping.html
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>                        
                 </button>
-                <a class="navbar-brand" href="#">Shopping WebSite</a>
+                <!-- <a class="navbar-brand" href="#">Shopping WebSite</a> -->
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
@@ -50,21 +50,21 @@
                     <li><a href="#">BLOG</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Like</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Search</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-heart"></span> Like</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-search"></span> Search</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <div class="container-fluid">
-        <div class="imageAndText">
-            <img class="img-responsive image-text" src="img/image.jpg" alt="shoppingImage">
+        <div class="big-img-wrapper">
+            <img class="img-responsive" src="img/image.jpg" alt="shoppingImage">
             <button class="btn">SHOP NOW</button>
-            <div class="middle-left">
-                <h1>DISCOVER & SHOP <br> THE TREND</h1>
+            <div class="big-image-floating-text middle-left">
+                <span>DISCOVER & SHOP <br> THE TREND</span>
                 <br>
-                <p>Extra 75% off in Winter Sale</p>
+                <span class="small-text" style="font-size: 15px;">Extra 75% off in Winter Sale</span>
             </div>
         </div>
     </div>
@@ -78,27 +78,30 @@
                     <div class="small-img-wrapper">
                         <img src="img/shopping-girl.jpg" alt="shopping-girl" class="img-responsive small-img">
                         <button class="btn">VIEW COLLECTION</button>
-                        <div class="top-left">
-                            <p>NEW YEAR</p>
-                            <h2>LOOKBOOK</h2>
+                        <div class="small-image-floating-text top-left">
+                            <span>NEW YEAR</span>
+                            <br>
+                            <span class="big-text" style="font-size: 20px;">LOOKBOOK</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="small-img-wrapper">
                         <img src="img/mall.jpg" alt="shopping-man" class="img-responsive small-img">
-                        <div class="top-right">
-                            <p>SPRING/SUMMER</p>
-                            <h2>SHOP MEN</h2>
+                        <div class="small-image-floating-text top-right">
+                            <span>SPRING/SUMMER</span>
+                            <br>
+                            <span>SHOP MEN</span>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="small-img-wrapper">
                         <img src="img/shopping-mall.jpg" alt="shopping-girl" class="img-responsive small-img">
-                        <div class="top-right">
-                            <p>WINTER SALE</p>
-                            <h2>60% OFF</h2>
+                        <div class="small-image-floating-text top-right">
+                            <span>WINTER SALE</span>
+                            <br>
+                            <span>60% OFF</span>
                         </div>
                     </div>
                 </div>
@@ -107,53 +110,175 @@
     </div>
     <br>
 
-    <div class="container">
-        <h3>FEATURED PRODUCTS</h3>
+    <div class="container" id="slides">
+        <h3 class="dark" style="font-weight: bold;">BEST PRODUCTS</h3>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="img/image" alt="First-slide" class="img-responsive">
+                    <img src="img/menshirt" alt="First-slide" class="img-responsive">
                     <div class="carousel-caption">
-                        <h2>Mens T-shirt</h2>
-                        <p>$90.00</p>
+                        <span class="caption" style="font-size: 20px; color: black;">Mens T-shirt</span>
+                        <br>
+                        <span>$190.00</span>
                     </div>
                 </div>
 
                 <div class="item">
-                    <img src="img/images" alt="Second-slide" class="img-responsive">
+                    <img src="img/image" alt="Second-slide" class="img-responsive">
                     <div class="carousel-caption">
-                        <h2>Mens T-shirt</h2>
-                        <p>$80.00</p>
+                        <span class="caption" style="font-size: 20px; color: black;">Mens Shirt</span>
+                        <br>
+                        <span>$80.00</span>
                     </div>
                 </div>
     
                 <div class="item">
-                    <img src="img/t-shirt" alt="Third-slide" class="img-responsive">
+                    <img src="img/shirt" alt="Third-slide" class="img-responsive">
                     <div class="carousel-caption">
-                        <h2>Mens T-shirt</h2>
-                        <p>$70</p>s
+                        <span class="caption" style="font-size: 20px; color: black;">Mens Shirt</span>
+                        <br>
+                        <span>$70.00</span>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+                <div class="item">
+                    <img src="img/t-shirt1" alt="Fourth-slide" class="img-responsive">
+                    <div class="carousel-caption">
+                        <span class="caption" style="font-size: 20px; color: black;">Womens Top</span>
+                        <br>
+                        <span>$167.75</span>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <img src="img/tshirt" alt="Fifth-slide" class="img-responsive">
+                    <div class="carousel-caption">
+                        <span class="caption" style="font-size: 20px; color: black;">Womens Top</span>
+                        <br>
+                        <span>$184.90</span>
+                    </div>
+                </div>
+
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </div>
+    <br>
 
+    <div class="container-fluid">
+        <div class="product-img-wrapper">
+            <img class="img-responsive" src="img/product.jpg" alt="productImage">
+            <button class="btn">BUY NOW</button>
+            <div class="product-img-floating-text middle-top">
+                <span class="products" style="font-weight: bold; font-size: 30px;">Exclusive Deals & Discounts</span>
+                <br>
+                <span>Deals Upto 50% Beauty Sale, 300 Off Code, 6% Cashback.</span>
+            </div>
+        </div> 
+    </div>
+    <br>
+    <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4">
+
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
+
+            <!-- Grid row -->
+            <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-md-6 mt-md-0 mt-3">
+
+                    <!-- Content -->
+                    <h5 class="text-uppercase">Footer Content</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit amet numquam iure provident voluptate
+                        esse
+                    quasi, veritatis totam voluptas nostrum.</p>
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none pb-3">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-md-0 mb-3">
+
+                    <!-- Links -->
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!">Link 4</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-md-0 mb-3">
+
+                    <!-- Links -->
+                    <h5 class="text-uppercase">Links</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Link 1</a>
+                        </li>
+                        <li>
+                            <a href="#!">Link 2</a>
+                        </li>
+                        <li>
+                            <a href="#!">Link 3</a>
+                        </li>
+                        <li>
+                            <a href="#!">Link 4</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="https://www.designlazy.com/website-psd/"> designlazy.com</a>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
 </body>
 </html> 
