changed carousel images

--- a/shopping.html
+++ b/shopping.html
@@ -246,7 +246,7 @@
 
                                 <div class="caption text-center">
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Trausor</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Men trausor</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Men's trausor</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$150</del><br>$125
                                     </span>
@@ -256,11 +256,11 @@
 
                         <div class="item">
                             <div class="col-xs-4">
-                                <a href="#1"><img src="img/pant.jpg" class="img-responsive img-thumbnail"></a>
+                                <a href="#1"><img src="img/grey-pant.jpg" class="img-responsive img-thumbnail"></a>
 
                                 <div class="caption text-center">
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Trausor</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Men trausor</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Boy's trausor</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$150</del><br>$125
                                     </span>
@@ -288,7 +288,7 @@
 
                                 <div class="caption text-center">
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Top</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Women top</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Women's top</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$135</del><br>$105
                                     </span>
@@ -298,11 +298,11 @@
 
                         <div class="item">
                             <div class="col-xs-4">
-                                <a href="#1"><img src="img/whitetshirt.jpg" class="img-responsive img-thumbnail"></a>
+                                <a href="#1"><img src="img/wide-leg.jpg" class="img-responsive img-thumbnail"></a>
 
                                 <div class="caption text-center">
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">T-shirt</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Men t-shirt</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Shorts</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Men's threefourth</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$130</del><br>$115
                                     </span>
@@ -312,11 +312,11 @@
                       
                         <div class="item">
                             <div class="col-xs-4">
-                                <a href="#1"><img src="img/hanger-tshirt.png" class="img-responsive img-thumbnail"></a>
+                                <a href="#1"><img src="img/girlsshort" class="img-responsive img-thumbnail"></a>
 
                                 <div class="caption text-center">
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">T-shirt</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Girls t-shirt</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Shorts</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Girls shorts</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$100</del><br>$70
                                     </span>
@@ -331,7 +331,7 @@
 
                                 <div class="caption text-center">
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Top</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Women top</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Women's top</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$150</del><br>$125
                                     </span>
@@ -341,11 +341,11 @@
 
                         <div class="item">
                             <div class="col-xs-4">
-                                <a href="#1"><img src="img/black.jpg" class="img-responsive img-thumbnail"></a>
+                                <a href="#1"><img src="img/blue" class="img-responsive img-thumbnail"></a>
 
                                 <div class="caption text-center">
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Top</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Women top</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Trausor</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Girl's pant</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$150</del><br>$125
                                     </span>
@@ -367,18 +367,6 @@
     </div>
 
     <br>
-    <!-- <div class="item">
-        <div class="itemDetails">
-            <div class="itemImage">
-                <img src="img/tshirt" alt="" />
-            </div>
-            <div class="itemText">
-                <p class="price-container">Price: $<span class="price">10</span></p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at optio nam asperiores ipsam voluptate eaque labore.</p>
-            </div>
-        </div>
-        <button class="add">Add to cart</button>
-    </div> -->
 
     <div class="container">
         <h3 id="sale_products" class="h3">sale products</h3>
