fixed carousel images

--- a/shopping.html
+++ b/shopping.html
@@ -256,11 +256,11 @@
 
                         <div class="item">
                             <div class="col-xs-4">
-                                <a href="#1"><img src="img/grey-pant.jpg" class="img-responsive img-thumbnail"></a>
+                                <a href="#1"><img src="img/chai+time+tshirt.jpg" class="img-responsive img-thumbnail"></a>
 
                                 <div class="caption text-center">
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Trausor</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Boy's trausor</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Tshirt</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Boy's tshirt</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$150</del><br>$125
                                     </span>
@@ -302,7 +302,7 @@
 
                                 <div class="caption text-center">
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Shorts</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Men's threefourth</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Boy's threefourth</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$130</del><br>$115
                                     </span>
@@ -312,11 +312,11 @@
                       
                         <div class="item">
                             <div class="col-xs-4">
-                                <a href="#1"><img src="img/girlsshort" class="img-responsive img-thumbnail"></a>
+                                <a href="#1"><img src="img/green" class="img-responsive img-thumbnail"></a>
 
                                 <div class="caption text-center">
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Shorts</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Girls shorts</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Tshirt</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Girls tshirt</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$100</del><br>$70
                                     </span>
@@ -341,11 +341,11 @@
 
                         <div class="item">
                             <div class="col-xs-4">
-                                <a href="#1"><img src="img/blue" class="img-responsive img-thumbnail"></a>
+                                <a href="#1"><img src="img/white" class="img-responsive img-thumbnail"></a>
 
                                 <div class="caption text-center">
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Trausor</span><br>
-                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Girl's pant</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Tshirt</span><br>
+                                    <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">Girl's tshirt</span><br>
                                     <span class="big-text" style="font-size: 16px; font-weight: bold; color: white;">
                                         <del>$150</del><br>$125
                                     </span>
