--- a/shopping.html
+++ b/shopping.html
@@ -6,13 +6,12 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="shopping.css">
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <title>Bonfire E-Commerce Website</title>
 </head>
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <title>Bonfire E-Commerce Website</title>
 
     <header>
         <h1 class="text-uppercase">bonfire</h1>
@@ -44,8 +43,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>                        
                 </button>
-                <!-- <a class="navbar-brand" href="#">Shopping WebSite</a> -->
-            </div>
+                <a class="navbar-brand" href="#">Bonfire E-Commerce WebSite</a>
+            </div>      
 
             <div class="collapse navbar-collapse" id="myNavbar">
 
@@ -84,7 +83,7 @@
                         <a href="#"><i class="fa fa-fw fa-search"></i></a>
                     </div>
 
-                </div>
+                </div>  
 
             </div>
 
@@ -381,7 +380,6 @@
                         <ul class="social">
                             <li><a href="" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
                         <span class="product-new-label">Sale</span>
                         <span class="product-discount-label">20%</span>
@@ -395,12 +393,9 @@
                     </ul>
                     <div class="product-content">
                         <h3 class="title"><a href="#">Women's White Top</a></h3>
-                        <!-- <div class="price">$16.00 -->
                         <div class="price-container">
                             $<span class="price">20</span>
-                            <!-- <span>$20.00</span> -->
                         </div>
-                        <!-- <a class="add-to-cart" href="">+ Add To Cart</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
                 </div>
@@ -415,7 +410,6 @@
                         <ul class="social">
                             <li><a href="" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
                         <span class="product-new-label">Sale</span>
                         <span class="product-discount-label">50%</span>
@@ -429,12 +423,9 @@
                     </ul>
                     <div class="product-content">
                         <h3 class="title"><a href="#">Men's Plain Tshirt</a></h3>
-                        <!-- <div class="price">$5.00 -->
                         <div class="price-container">
                             $<span class="price">10</span>
-                            <!-- <span>$10.00</span> -->
                         </div>
-                        <!-- <a class="add-to-cart" href="">+ Add To Cart</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
                 </div>
@@ -449,7 +440,6 @@
                         <ul class="social">
                             <li><a href="" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
                         <span class="product-new-label">Sale</span>
                         <span class="product-discount-label">50%</span>
@@ -463,12 +453,9 @@
                     </ul>
                     <div class="product-content">
                         <h3 class="title"><a href="#">Men's Blazer</a></h3>
-                        <!-- <div class="price">$5.00 -->
                         <div class="price-container">
                             $<span class="price">10</span>
-                            <!-- <span>$10.00</span> -->
                         </div>
-                        <!-- <a class="add-to-cart" href="">+ Add To Cart</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
                 </div>
@@ -483,7 +470,6 @@
                         <ul class="social">
                             <li><a href="" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
                         <span class="product-new-label">Sale</span>
                         <span class="product-discount-label">50%</span>
@@ -497,12 +483,9 @@
                     </ul>
                     <div class="product-content">
                         <h3 class="title"><a href="#">Men's Plain Tshirt</a></h3>
-                        <!-- <div class="price">$5.00 -->
                         <div class="price-container">
                             $<span class="price">10</span>
-                            <!-- <span>$10.00</span> -->
                         </div>
-                        <!-- <a class="add-to-cart" href="">+ Add To Cart</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
                 </div>
@@ -530,7 +513,6 @@
                         <ul class="social">
                             <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
 
                         <span class="product-new-label">New</span>
@@ -540,14 +522,10 @@
                     <div class="product-content">
                         <h3 class="title"><a href="#">Women's Black Top</a></h3>
 
-                        <!-- <div class="price"> -->
                         <div class="price-container">
                             $<span class="price">16</span>
-                            <!-- $14.40 -->
-                            <!-- <span>$16.00</span> -->
                         </div>
 
-                        <!-- <a class="add-to-cart" href="">ADD TO CART</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
 
@@ -568,7 +546,6 @@
                         <ul class="social">
                             <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
 
                         <span class="product-new-label">New</span>
@@ -578,14 +555,10 @@
                     <div class="product-content">
                         <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
 
-                        <!-- <div class="price"> -->
                         <div class="price-container">
                             $<span class="price">20</span>
-                            <!-- $17.60 -->
-                            <!-- <span>$20.00</span> -->
                         </div>
 
-                        <!-- <a class="add-to-cart" href="">ADD TO CART</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
 
@@ -606,7 +579,6 @@
                         <ul class="social">
                             <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
 
                         <span class="product-new-label">New</span>
@@ -616,14 +588,10 @@
                     <div class="product-content">
                         <h3 class="title"><a href="#">Men's White Shirt</a></h3>
 
-                        <!-- <div class="price"> -->
                         <div class="price-container">
                             $<span class="price">16</span>
-                            <!-- $14.40 -->
-                            <!-- <span>$16.00</span> -->
                         </div>
 
-                        <!-- <a class="add-to-cart" href="">ADD TO CART</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
 
@@ -644,7 +612,6 @@
                         <ul class="social">
                             <li><a href="#" data-tip="Quick View"><i class="fa fa-eye"></i></a></li>
                             <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
-                            <!-- <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li> -->
                         </ul>
 
                         <span class="product-new-label">New</span>
@@ -654,14 +621,10 @@
                     <div class="product-content">
                         <h3 class="title"><a href="#">Women's White Top</a></h3>
 
-                        <!-- <div class="price"> -->
                         <div class="price-container">
                             $<span class="price">16</span>
-                            <!-- $14.40 -->
-                            <!-- <span>$16.00</span> -->
                         </div>
 
-                        <!-- <a class="add-to-cart" href="">ADD TO CART</a> -->
                         <button class="add-to-cart">Add to cart</button>
                     </div>
 
